@@ -520,6 +520,13 @@ struct ipmi_oem_command oem_gigabyte[] =
       ipmi_oem_gigabyte_set_nic_mode
     },
     {
+      "set-bmc-services",
+      "<enable|disable> <ssh|http|rpcbind|svrloc|https|avocenkvm|wbem-http|wbem-https>",
+      2,
+      IPMI_OEM_COMMAND_FLAGS_DEFAULT,
+      ipmi_oem_gigabyte_set_bmc_services
+    },
+    {
       NULL,
       NULL,
       0,
