@@ -32,6 +32,10 @@ extern "C" {
 #define IPMI_OEM_GIGABYTE_NIC_MODE_SHARED      0x02
 #define IPMI_OEM_GIGABYTE_NIC_MODE_FAILOVER    0x03
 
+/* w/ IPMI_CMD_OEM_GIGABYTE_PORT_CONFIGURATION */
+#define IPMI_OEM_GIGABYTE_BLOCK_PORT   0
+#define IPMI_OEM_GIGABYTE_UNBLOCK_PORT 1
+
 #ifdef __cplusplus
 }
 #endif
