@@ -397,6 +397,11 @@ This OEM command will set the current NIC mode to dedicated, shared,
 or failover.  (See \fIget\-nic\-mode\fR above for description on
 dedicated vs. shared vs failover modes.)  Command confirmed to work on
 GIGABYTE MD90-FS0-ZB.
+.TP
+.B set-bmc-services \fIenable|disable\fR \fIssh|http|rpcbind|svrloc|https|avocenkvm|wbem-http|wbem-https\fR
+This OEM command will enable or disable BMC services besides IPMI.
+Note that \fIhttp\fR refers to both http and https.  Command confirmed
+to work on GIGABYTE MD90-FS0-ZB.
 .RE
 .TP
 .B IBM
