@@ -1,3 +1,7 @@
+2016-08-29 Albert Chu <chu11@llnl.gov>
+	
+	* ipmi-oem/: Add Gigabyte get/set-bmc-services commands.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* ipmi-config/ipmi-config-category-core-lan-conf-security-keys-section.c (k_g_checkout),
